# datastore-rs

./: Cargo.toml  README.md
src/: lib.rs
src/config/: mod.rs
src/controller/: mod.rs
src/datastore/: mod.rs  types.rs
src/datastore/enums/: error.rs  mod.rs  pair.rs
src/datastore/utilities/: internal.rs  mod.rs
src/enums/: mod.rs
src/hook/: mod.rs
src/hook/enums/: mod.rs
src/hook/utilities/: mod.rs
src/logger/: mod.rs
src/logger/enums/: mod.rs
src/logger/utilities/: mod.rs
src/tests/: config.rs  datastore.rs  hook_manager.rs  logger.rs  mod.rs
src/types/: mod.rs
src/utilities/: mod.rs  tests.rs
